--- a/styles.css
+++ b/styles.css
@@ -32,128 +32,12 @@ body {
     border-radius: 15%;
 }
 
-.plet1 {
-    display: block;
-    align-self: center;
-    justify-self: center;
-    display: grid;
-    grid-row: 2;
-    grid-column: 2;
+.plet {
     width: 24px;
     height: 24px;
-    border-radius: 50%;
     background-color: #333;
+    border-radius: 50%;
     box-shadow: inset 0 3px #111, inset 0 -3px #555;
     opacity: 1;
-}
-
-.plet2 {
-    display: block;
-    align-self: center;
-    justify-self: center;
-    display: grid;
-    grid-row: 1;
-    grid-column: 3;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    background-color: #333;
-    box-shadow: inset 0 3px #111, inset 0 -3px #555;
-    opacity: 2;
-}
-
-.plet3 {
-    display: block;
-    align-self: center;
-    justify-self: center;
-    display: grid;
-    grid-row: 3;
-    grid-column: 1;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    background-color: #333;
-    box-shadow: inset 0 3px #111, inset 0 -3px #555;
-    opacity: 1;
-}
-
-.plet5 {
-    display: block;
-    align-self: center;
-    justify-self: center;
-    display: grid;
-    grid-row: 2;
-    grid-column: 2;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    background-color: #333;
-    box-shadow: inset 0 3px #111, inset 0 -3px #555;
-    opacity: 4;
-}
-
-.plet5 {
-    display: block;
-    align-self: center;
-    justify-self: center;
-    display: grid;
-    grid-row: 1;
-    grid-column: 1;
-    display: block;
-    align-self: center;
-    justify-self: center;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    background-color: #333;
-    box-shadow: inset 0 3px #111, inset 0 -3px #555;
-    opacity: 4;
-}
-
-.plet6 {
-    display: block;
-    align-self: center;
-    justify-self: center;
-    display: grid;
-    grid-row: 3;
-    grid-column: 3;
-    display: block;
-    align-self: center;
-    justify-self: center;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    background-color: #333;
-    box-shadow: inset 0 3px #111, inset 0 -3px #555;
-    opacity: 4;
-}
-
-.plet7 {
-    display: block;
-    align-self: center;
-    justify-self: center;
-    display: grid;
-    grid-row: 2;
-    grid-column: 1;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    background-color: #333;
-    box-shadow: inset 0 3px #111, inset 0 -3px #555;
-    opacity: 3;
-}
-
-.plet8 {
-    display: block;
-    align-self: center;
-    justify-self: center;
-    display: grid;
-    grid-row: 2;
-    grid-column: 3;
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    background-color: #333;
-    box-shadow: inset 0 3px #111, inset 0 -3px #555;
-    opacity: 3;
+    position: absolute;
 }
