--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,91 @@ body {
     background-color: #333;
     border-radius: 50%;
     box-shadow: inset 0 3px #111, inset 0 -3px #555;
+    opacity: 0;
+    display: grid;
+    align-self: center;
+    justify-self: center;
+    grid-row: 2;
+    grid-column: 2;
+}
+
+
+.plet.a {
+    grid-row: 1;
+    grid-column: 1;
+}
+
+.plet.b {
+    grid-row: 2;
+    grid-column: 2;
+}
+
+.plet.c {
+    grid-row: 1;
+    grid-column: 3;
+}
+
+.plet.d {
+    grid-row: 3;
+    grid-column: 1;
+}
+
+.plet.e {
+    grid-row: 2;
+    grid-column: 1;
+}
+
+.plet.f {
+    grid-row: 2;
+    grid-column: 3;
+}
+
+.plet.g {
+    grid-row: 3;
+    grid-column: 3;
+}
+
+/* Side 1 */
+.terning.side1 .plet.b {
     opacity: 1;
-    position: absolute;
+}
+
+/* Side 2 */
+.terning.side2 .plet.a,
+.terning.side2 .plet.g {
+    opacity: 1;
+}
+
+/* Side 3 */
+.terning.side3 .plet.a,
+.terning.side3 .plet.g,
+.terning.side3 .plet.b {
+    opacity: 1;
+}
+
+/* Side 4 */
+.terning.side4 .plet.a,
+.terning.side4 .plet.c,
+.terning.side4 .plet.d,
+.terning.side4 .plet.g {
+    opacity: 1;
+}
+
+/* Side 5 */
+.terning.side5 .plet.a,
+.terning.side5 .plet.c,
+.terning.side5 .plet.d,
+.terning.side5 .plet.g,
+.terning.side5 .plet.b {
+    opacity: 1;
+}
+
+/* Side 6 */
+.terning.side6 .plet.a,
+.terning.side6 .plet.c,
+.terning.side6 .plet.d,
+.terning.side6 .plet.e,
+.terning.side6 .plet.f,
+.terning.side6 .plet.g {
+    opacity: 1;
 }
